Fixed Responsiveness after testing on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -309,7 +309,7 @@ header h1 {
 
 @media (max-width: 430px) {
     .mywork {
-        height: 6000px;
+        height: 4000px;
     }
     
 }
